tests/ui/rfc-2632-const-trait-impl/attr-misuse.stderr
error: attribute should be applied to a trait
  --> $DIR/attr-misuse.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^

error: attribute should be applied to a trait
  --> $DIR/attr-misuse.rs:5:5
   |
LL |     #[const_trait]
   |     ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

