tests/ui/rfc-2632-const-trait-impl/attr-misuse.rs
#![feature(const_trait_impl)]

#[const_trait]
trait A {
    #[const_trait] //~ ERROR attribute should be applied
    fn foo(self);
}

#[const_trait] //~ ERROR attribute should be applied
fn main() {}
